REOPENED185889
REGRESSION (r231817?): Layout Test media/track/track-delete-during-setup.html is a flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=185889
Summary REGRESSION (r231817?): Layout Test media/track/track-delete-during-setup.html...
Ryan Haddad
Reported 2018-05-22 14:42:13 PDT
Layout Test media/track/track-delete-during-setup.html is a flaky timeout on iOS and macOS Probable cause: Unknown, this started within the past 7 days Flakiness Dashboard: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=media%2Ftrack%2Ftrack-delete-during-setup.html
Attachments
Patch (3.42 KB, patch)
2018-06-05 20:57 PDT, Jer Noble
no flags
Archive of layout-test-results from ews200 for win-future (12.99 MB, application/zip)
2018-06-05 22:09 PDT, EWS Watchlist
no flags
Alexey Proskuryakov
Comment 1 2018-05-26 19:53:54 PDT
The first failure I see was with r231819. Looking back, I see some changes that sound relevant: https://trac.webkit.org/r231818 Pause display links when window is not visible. https://trac.webkit.org/r231817 Media continues loading after rendered invisible (removed from DOM; scrolled off screen)
Radar WebKit Bug Importer
Comment 2 2018-05-26 19:54:12 PDT
Jer Noble
Comment 3 2018-06-05 20:57:36 PDT
EWS Watchlist
Comment 4 2018-06-05 22:09:07 PDT
Comment on attachment 342026 [details] Patch Attachment 342026 [details] did not pass win-ews (win): Output: http://webkit-queues.webkit.org/results/8024872 New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-audio.html
EWS Watchlist
Comment 5 2018-06-05 22:09:18 PDT
Created attachment 342032 [details] Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Jer Noble
Comment 6 2018-06-06 08:47:46 PDT
(In reply to Build Bot from comment #4) > Comment on attachment 342026 [details] > Patch > > Attachment 342026 [details] did not pass win-ews (win): > Output: http://webkit-queues.webkit.org/results/8024872 > > New failing tests: > http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-audio.html This just looks like a flakey test; the modified file in this patch isn't even compiled on win.
WebKit Commit Bot
Comment 7 2018-06-06 13:37:28 PDT
Comment on attachment 342026 [details] Patch Clearing flags on attachment: 342026 Committed r232557: <https://trac.webkit.org/changeset/232557>
WebKit Commit Bot
Comment 8 2018-06-06 13:37:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.