REGRESSION (r231817?): Layout Test media/track/track-delete-during-setup.html is a flaky timeout https://bugs.webkit.org/show_bug.cgi?id=185889 <rdar://problem/40583180>

Reviewed by Eric Carlson.

Source/WebCore:

Explicitly update the network and ready states when detaching the AVPlayerItem
from the AVPlayer.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::setShouldBufferData):

LayoutTests:

Modify the track-delete-during-setup.html test to end on video element suspend in
addition to canplaythrough.

* media/track/track-delete-during-setup.html:


Canonical link: https://commits.webkit.org/201733@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232557 268f45cc-cd09-0410-ab3c-d52691b4dbfc